Doc/force-app/main/default/objects/Account/fields/Create_Prospect__c.field-meta.xml
<CustomField>
    <fullName>Create_Prospect__c</fullName>
    <description>Action picklist : Setting a value to this field and saving this record would create a new Customer in NetSuite and subsequently OpenAir</description>
    <inlineHelpText>Action picklist : Setting a value to this field and saving this record would create a new Customer in NetSuite and subsequently OpenAir</inlineHelpText>
    <label>Create Prospect for NS Subsidiary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
            </value>
            <value>
                <fullName>05</fullName>
            </value>
            <value>
                <fullName>08</fullName>
            </value>
            <value>
                <fullName>18</fullName>
            </value>
            <value>
                <fullName>23</fullName>
            </value>
            <value>
                <fullName>28</fullName>
            </value>
            <value>
                <fullName>35</fullName>
            </value>
            <value>
                <fullName>37</fullName>
            </value>
            <value>
                <fullName>40</fullName>
            </value>
            <value>
                <fullName>42</fullName>
            </value>
            <value>
                <fullName>44</fullName>
            </value>
            <value>
                <fullName>46</fullName>
            </value>
            <value>
                <fullName>50</fullName>
            </value>
            <value>
                <fullName>06</fullName>
            </value>
            <value>
                <fullName>09</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>