Doc/force-app/main/default/objects/Account/fields/Criteria_Based_Access__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Based_Access__c</fullName>
    <inlineHelpText>Does this customer own Criteria Based Access?</inlineHelpText>
    <label>Criteria Based Access</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Suspect</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Own it</fullName>
            </value>
            <value>
                <fullName>Billing Paused</fullName>
            </value>
            <value>
                <fullName>Lapsed</fullName>
            </value>
            <value>
                <fullName>Entitled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>