Doc/force-app/main/default/objects/Account/fields/CRM_Sink__c.field-meta.xml
<CustomField>
    <fullName>CRM_Sink__c</fullName>
    <description>CR# 40059</description>
    <label>CRM/Sink</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>InterAction</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Dynamics</fullName>
            </value>
            <value>
                <fullName>ContactEase</fullName>
            </value>
            <value>
                <fullName>Stand-alone</fullName>
            </value>
            <value>
                <fullName>OnePlace Classic</fullName>
            </value>
            <value>
                <fullName>Intapp CRM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>