Doc/force-app/main/default/objects/Account/fields/CSM_Engagement_Model__c.field-meta.xml
<CustomField>
    <fullName>CSM_Engagement_Model__c</fullName>
    <label>Engagement Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strategic</fullName>
            </value>
            <value>
                <fullName>Star</fullName>
            </value>
            <value>
                <fullName>Status</fullName>
            </value>
            <value>
                <fullName>Streamline</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>Portfolio</fullName>
            </value>
            <value>
                <fullName>Strategic Global Group</fullName>
                <isActive>false</isActive>
                <label>Strategic Global Group</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>