Doc/force-app/main/default/objects/Account/fields/CSM_Health_Rating_IB__c.field-meta.xml
<CustomField>
    <fullName>CSM_Health_Rating_IB__c</fullName>
    <inlineHelpText>A - Good 
B - Minor Concerns 
C - No Knowledge 
D - At-Risk</inlineHelpText>
    <label>OLD - CSM Health Rating - IB</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A - Good</fullName>
                <color>#009900</color>
                <label>A - Good</label>
            </value>
            <value>
                <fullName>B - Minor Concerns</fullName>
                <color>#78C953</color>
                <label>B - Minor Concerns</label>
            </value>
            <value>
                <fullName>C - No Knowledge</fullName>
                <color>#FFFF66</color>
                <label>C - No Knowledge</label>
            </value>
            <value>
                <fullName>D - At-Risk</fullName>
                <color>#CC0000</color>
                <label>D - At-Risk</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>