Doc/force-app/main/default/objects/Account/fields/Currency_Placeholder_2__c.field-meta.xml
<CustomField>
    <fullName>Currency_Placeholder_2__c</fullName>
    <description>This field is only used as a placeholder on certain charts, so that the correct automatic colors will be used for other fields that we actually want to report on. Don&apos;t enter anything in this field.</description>
    <inlineHelpText>This field is only used as a placeholder on certain charts, so that the correct automatic colors will be used for other fields that we actually want to report on. Don&apos;t enter anything in this field.</inlineHelpText>
    <label>Currency Placeholder 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>