Doc/force-app/main/default/objects/Account/fields/Current_CMC_Version__c.field-meta.xml
<CustomField>
    <fullName>Current_CMC_Version__c</fullName>
    <description>CR# 40059</description>
    <label>Current CMC Version</label>
    <length>80</length>
    <type>Text</type>
</CustomField>