Doc/force-app/main/default/objects/Account/fields/Customer_Logins__c.field-meta.xml
<CustomField>
    <fullName>Customer_Logins__c</fullName>
    <label>Customer Logins</label>
    <type>TextArea</type>
</CustomField>