Doc/force-app/main/default/objects/Account/fields/Customer_Since__c.field-meta.xml
<CustomField>
    <fullName>Customer_Since__c</fullName>
    <label>Customer Since</label>
    <summarizedField>Opportunity.CloseDate</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Type</field>
        <operation>equals</operation>
        <value>Legal - Acquired New Customer, Legal - New Customer, Legal - Recovered Customer, Legal - New Converted Customer, Bridgeway - New, Acquired New Customer, Acquired New Product, New Customer</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>