Doc/force-app/main/default/objects/Account/fields/Customer_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Status__c</fullName>
    <description>This shows &quot;Customer&quot; if the Account is a Customer Account.</description>
    <formula>IF(
  OR(
    ISPICKVAL(Type, &quot;Customer&quot;),
    ISPICKVAL(Type, &quot;Customer - Billing Paused&quot;)
  ),
  &quot;Customer&quot;,
  IF(
    ISPICKVAL(Type, &quot;Customer - LegalKEY Only&quot;),
    &quot;Future Customer&quot;,
    &quot;Future Customer&quot;
  )
)</formula>
    <inlineHelpText>This shows &quot;Customer&quot; if the Account is a Customer Account.</inlineHelpText>
    <label>Customer Status</label>
    <type>Text</type>
</CustomField>