Doc/force-app/main/default/objects/Account/fields/Date_Account_Name_Changed__c.field-meta.xml
<CustomField>
    <fullName>Date_Account_Name_Changed__c</fullName>
    <description>Used to audit the Account Short Name field so it can be updated when the Account Name is updated.</description>
    <label>Date Account Name Changed</label>
    <type>Date</type>
</CustomField>