Doc/force-app/main/default/objects/Account/fields/DBPortfolio__c.field-meta.xml
<CustomField>
    <fullName>DBPortfolio__c</fullName>
    <label>DB</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Informix</fullName>
            </value>
            <value>
                <fullName>LDAP</fullName>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
            <value>
                <fullName>SQL Server</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>