Doc/force-app/main/default/objects/Account/fields/DC_MSA_Addendum_Notes__c.field-meta.xml
<CustomField>
    <fullName>DC_MSA_Addendum_Notes__c</fullName>
    <label>DC MSA Addendum - Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>