Doc/force-app/main/default/objects/Account/fields/DE_Version__c.field-meta.xml
<CustomField>
    <fullName>DE_Version__c</fullName>
    <label>DE Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>