Doc/force-app/main/default/objects/Account/fields/Decisions_and_purchasing__c.field-meta.xml
<CustomField>
    <fullName>Decisions_and_purchasing__c</fullName>
    <inlineHelpText>What is the decision and purchasing process?</inlineHelpText>
    <label>Decisions and purchasing</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>