Doc/force-app/main/default/objects/Account/fields/Dedicated_Support_Engineer_Experience__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_Support_Engineer_Experience__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dedicated Support Engineer (Experience)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts7</relationshipName>
    <type>Lookup</type>
</CustomField>