Doc/force-app/main/default/objects/Account/fields/Dedicated_Support_Engineer_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_Support_Engineer_Pricing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dedicated Support Engineer (Pricing)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts8</relationshipName>
    <type>Lookup</type>
</CustomField>