Doc/force-app/main/default/objects/Account/fields/Dedicated_Support_Engineer_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_Support_Engineer_Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dedicated Support Engineer(Relationship)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts9</relationshipName>
    <type>Lookup</type>
</CustomField>