Doc/force-app/main/default/objects/Account/fields/DefaultBillingAddress__c.field-meta.xml
<CustomField>
    <fullName>DefaultBillingAddress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>BIZ-65157 - Account’s default Billing Address for NetSuite integration.</description>
    <label>Default Billing Address</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>