Doc/force-app/main/default/objects/Account/fields/DefaultShippingAddress__c.field-meta.xml
<CustomField>
    <fullName>DefaultShippingAddress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>BIZ-65157 – Account’s default Shipping Address for NetSuite integration.</description>
    <label>Default Shipping Address</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Accounts (DefaultShippingAddress)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>