Doc/force-app/main/default/objects/Account/fields/Delphai_Master_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Delphai_Master_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delphai Master Agreement</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Accounts (delphai Master Agreement)</relationshipLabel>
    <relationshipName>AccountsJpTJ</relationshipName>
    <type>Lookup</type>
</CustomField>