Doc/force-app/main/default/objects/Account/fields/DemandBase_Initiative__c.field-meta.xml
<CustomField>
    <fullName>DemandBase_Initiative__c</fullName>
    <description>Tracks the initiative for which DemandBase will be altering the .com experience for the site visitor
Ticket #23871</description>
    <inlineHelpText>Confirmation of the DemandBase play flagged for the Account</inlineHelpText>
    <label>DemandBase Initiative</label>
    <type>TextArea</type>
</CustomField>