Doc/force-app/main/default/objects/Account/fields/Desktop_TE_Version_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>Desktop_TE_Version_Last_Modified__c</fullName>
    <label>TE Desktop Version Last Modified</label>
    <type>Date</type>
</CustomField>