Doc/force-app/main/default/objects/Account/fields/Directory_ServicesPortfolio__c.field-meta.xml
<CustomField>
    <fullName>Directory_ServicesPortfolio__c</fullName>
    <description>This is to designate the Directory Services application in use at the account. This replaced the old checkbox system.</description>
    <label>Directory Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active Directory</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Novell NDS</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>