Doc/force-app/main/default/objects/Account/fields/Do_Not_Name__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the firm does not want their name used in any media.</inlineHelpText>
    <label>Do Not Use Name</label>
    <type>Checkbox</type>
</CustomField>