Doc/force-app/main/default/objects/Account/fields/DocketingPortfolio__c.field-meta.xml
<CustomField>
    <fullName>DocketingPortfolio__c</fullName>
    <description>This is to designate the Docketing application in use at the account. This replaced the old checkbox system.</description>
    <inlineHelpText>What Docketing software does this account use?</inlineHelpText>
    <label>Docketing</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>American LegalNet eDocket</fullName>
            </value>
            <value>
                <fullName>CompuLaw</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>IP Manager</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Patricia</fullName>
            </value>
            <value>
                <fullName>PATTSY</fullName>
            </value>
            <value>
                <fullName>ProLaw</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>