Doc/force-app/main/default/objects/Account/fields/Does_COO_Participate_in_Advisory_Board__c.field-meta.xml
<CustomField>
    <fullName>Does_COO_Participate_in_Advisory_Board__c</fullName>
    <label>Does COO Participate in Advisory Board?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invited</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>